--- a/FastCampus_Sample_CS/107_List/107_List.csproj
+++ b/FastCampus_Sample_CS/107_List/107_List.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{5C279686-2E13-4225-AFF0-DEC55FE478D5}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>_107_List</RootNamespace>
-    <AssemblyName>_107_List</AssemblyName>
+    <AssemblyName>107_List</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
