--- a/FastCampus_Sample_CS/110_Dictionary/110_Dictionary.csproj
+++ b/FastCampus_Sample_CS/110_Dictionary/110_Dictionary.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{248F72B3-6576-4C32-A9C3-15EE21376CB0}</ProjectGuid>
+    <ProjectGuid>{E4952EF7-9C1E-4535-8C47-F53DB7E1782F}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>_108_Queue</RootNamespace>
-    <AssemblyName>108_Queue</AssemblyName>
+    <RootNamespace>_110_Dictionary</RootNamespace>
+    <AssemblyName>110_Dictionary</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
