--- a/FastCampus_Sample_CS/111_try_catch/111_try_catch.csproj
+++ b/FastCampus_Sample_CS/111_try_catch/111_try_catch.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{248F72B3-6576-4C32-A9C3-15EE21376CB0}</ProjectGuid>
+    <ProjectGuid>{EED9EE67-C8A4-43B6-990A-FC63D49C3B1C}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>_108_Queue</RootNamespace>
-    <AssemblyName>108_Queue</AssemblyName>
+    <RootNamespace>_111_try_catch</RootNamespace>
+    <AssemblyName>111_try_catch</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
